--- a/client/index.html
+++ b/client/index.html
@@ -10,17 +10,14 @@
   <body>
     <div class = "page-wrapper">
         <header>
-            <h2>Sujet 1</h2>
+            <h2>Online Chatting</h2>
         </header>
+        <h3>Recent messages</h3>
         <ul>
-            <li> Message 1</li>
-            <li> Message 2</li>
-            <li> Message 3</li>
-            <li> Message 4</li>
-            <li> Message 5</li>
         </ul>
+        <h3>Send your message</h3>
         <div class="form">
-            <textarea id="message" placeholder="Ecrivez votre message"></textarea>
+            <textarea id="message" placeholder="Ecrivez votre message - pseudo"></textarea>
             <button id="send" onclick="sendMessage()">Envoyer</button>
         </div>
         <footer>
