--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
         <header>
             <h2>Online Chatting</h2>
         </header>
-        <h3>Recent messages</h3>
+        <h3 id="nber">Recent messages</h3>
         <ul>
         </ul>
         <h3>Send your message</h3>
